fix for course styling

--- a/src/main/webapp/css/css.css
+++ b/src/main/webapp/css/css.css
@@ -12,10 +12,10 @@ body {
 
 .column_left {
     float: left;
-    width: 200px;
+    min-width: 200px;
 }
 
 .column_right {
-    width: 500px; 
+    max-width: 500px; 
     float:left;
 }
