--- a/src/main/webapp/css/css.css
+++ b/src/main/webapp/css/css.css
@@ -20,6 +20,16 @@ body {
     float:left;
 }
 
+menu ul {
+    list-style: none;
+}
+
 menu ul li {
     float:left;
+}
+
+container {
+    background-color: #fff;
+    width:1200px;
+    margin:auto;
 }
