Moved templates to templates folder

--- a/src/main/webapp/templates/layout.xhtml
+++ b/src/main/webapp/templates/layout.xhtml
@@ -5,12 +5,14 @@
     <h:head>
         <title>Muldvarp</title>
         <h:outputStylesheet name="css.css" library="css"/>
-        <ui:insert name="extrascript" />
+        <ui:insert name="extrascript"/>
+        <ui:insert name="stylesheets"/>
     </h:head>
     <h:body>        
         <div id="container">
             <div id="header">
-                 <h1><ui:insert name="title" /></h1>
+                <h:link outcome="/index.xhtml">Home</h:link>
+                <h1><ui:insert name="title" /></h1>
             </div>
             <div id="menu">
                 <ui:include src="menu.xhtml" />
