--- a/src/main/webapp/templates/layout.xhtml
+++ b/src/main/webapp/templates/layout.xhtml
@@ -1,7 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:ui="http://java.sun.com/jsf/facelets">
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>Muldvarp</title>
         <h:outputStylesheet name="css.css" library="css"/>
@@ -11,7 +12,6 @@
     <h:body>        
         <div id="container">
             <div id="header">
-                <h:link outcome="/index.xhtml">Home</h:link>
                 <h1><ui:insert name="title" /></h1>
             </div>
             <div id="menu">
@@ -21,8 +21,8 @@
                 <div id="mainsingle">
                     <ui:insert name="mainsingle" />
                 </div>  
-                <div id="left">
-                    <ui:insert name="left" />
+                <div id="left" >
+                    <ui:insert name="left"/>
                 </div>    
                 <div id="right">
                     <ui:insert name="right" />
