--- a/src/main/webapp/templates/menu.xhtml
+++ b/src/main/webapp/templates/menu.xhtml
@@ -4,25 +4,19 @@
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:p="http://primefaces.org/ui">
     <h:form>
-        <ul>
-            <li><h:outputLink value="services/programme">REST Program</h:outputLink></li>
-            <li><h:outputLink value="services/course">Course REST</h:outputLink></li>
-            <li><h:outputLink value="services/video">Video REST</h:outputLink></li>
-            <li><h:outputLink value="services/Library">Library REST</h:outputLink></li>
-            <li><h:outputLink value="services/person">Person REST</h:outputLink></li>
-            <li><h:outputLink value="services/article/news/">News Articles REST</h:outputLink></li>
-        </ul>
+        <p:tabMenu>
+            <p:menuitem value="Home"        url="/"/>
+            <p:menuitem value="Programme"   url="/admin/listProgramme.xhtml"/>
+            <p:menuitem value="Courses"     url="/admin/listCourses.xhtml"/>
+            <p:menuitem value="Documents"   url="/listDocuments.xhtml"/>
+            <p:menuitem value="Videos"      url="/admin/listVideos.xhtml"/>
+            <p:menuitem value="Articles"    url="/listArticles.xhtml"/>
+            <p:menuitem value="People"      url="/listPeople.xhtml"/>
+            <p:menuitem value="Services"    url="/viewRest.xhtml"/>
+            <p:menuitem value="Add Video"   url="/admin/newVideo.xhtml"/>
+            <p:menuitem value="Add Article" url="/admin/newArticle.xhtml"/>
+            <p:menuitem value="Add Person"  url="/newPerson.xhtml"/>
+        </p:tabMenu>
         <br/>
-        <ul>
-            <li><h:link outcome="/admin/listCourses.xhtml">CourseList</h:link></li>
-            <li><h:link outcome="/admin/listProgramme.xhtml">Program</h:link></li>
-            <li><h:link outcome="/admin/listVideos.xhtml">VideoList</h:link></li>
-            <li><h:link outcome="/admin/newArticle.xhtml">New Article</h:link></li>
-            <li><h:link outcome="/admin/newVideo.xhtml">New Video</h:link></li>
-            <li><h:link outcome="/listDocuments.xhtml">Documents</h:link></li>
-            <li><h:link outcome="/listPeople.xhtml">People</h:link></li>
-            <li><h:link outcome="/listArticles.xhtml">Articles</h:link></li>
-            <li><h:link outcome="/newPerson.xhtml">New Person</h:link></li>
-        </ul>
     </h:form>
 </ui:composition>
