Added documents, quiz, videos and static page support for programmes

--- a/src/main/webapp/templates/menu.xhtml
+++ b/src/main/webapp/templates/menu.xhtml
@@ -14,10 +14,10 @@
             <p:menuitem value="People"      url="/listPeople.xhtml"/>
             <p:menuitem value="Services"    url="/viewRest.xhtml"/>
             <p:menuitem value="Quizzes"     url="/listQuizzes.xhtml"/>
-            <p:menuitem value="Add Video"   url="/admin/newVideo.xhtml"/>
+            <!-- <p:menuitem value="Add Video"   url="/admin/newVideo.xhtml"/>
             <p:menuitem value="Add Article" url="/admin/newArticle.xhtml"/>
             <p:menuitem value="Add Person"  url="/newPerson.xhtml"/>
-            <p:menuitem value="Add quiz"    url="/newQuiz.xhtml"/>
+            <p:menuitem value="Add quiz"    url="/newQuiz.xhtml"/> -->
         </p:tabMenu>
         <br/>
     </h:form>
