working prototype of serverside fragment system

--- a/src/main/webapp/templates/menu.xhtml
+++ b/src/main/webapp/templates/menu.xhtml
@@ -6,6 +6,7 @@
     <h:form>
         <p:tabMenu>
             <p:menuitem value="Home"        url="/"/>
+            <p:menuitem value="Frontpage"   url="/admin/editFrontpage.xhtml"/>
             <p:menuitem value="Programme"   url="/admin/listProgramme.xhtml"/>
             <p:menuitem value="Courses"     url="/admin/listCourses.xhtml"/>
             <p:menuitem value="Documents"   url="/listDocuments.xhtml"/>
