--- a/src/main/webapp/templates/menu.xhtml
+++ b/src/main/webapp/templates/menu.xhtml
@@ -14,7 +14,7 @@
             <p:menuitem value="Articles"    url="/listArticles.xhtml"/>
             <p:menuitem value="People"      url="/listPeople.xhtml"/>
             <p:menuitem value="Services"    url="/viewRest.xhtml"/>
-            <p:menuitem value="Quizzes"     url="/listQuizzes.xhtml"/>
+            <p:menuitem value="Quizzes"     url="/admin/listQuiz.xhtml"/>
             <!-- <p:menuitem value="Add Video"   url="/admin/newVideo.xhtml"/>
             <p:menuitem value="Add Article" url="/admin/newArticle.xhtml"/>
             <p:menuitem value="Add Person"  url="/newPerson.xhtml"/>
