Added Documentation page.

--- a/src/main/webapp/templates/menu.xhtml
+++ b/src/main/webapp/templates/menu.xhtml
@@ -10,11 +10,12 @@
             <p:menuitem value="Programme"   url="/admin/listProgramme.xhtml"/>
             <p:menuitem value="Courses"     url="/admin/listCourses.xhtml"/>
             <p:menuitem value="Documents"   url="/listDocuments.xhtml"/>
+            <p:menuitem value="Quizzes"     url="/admin/listQuiz.xhtml"/>
             <p:menuitem value="Videos"      url="/admin/listVideos.xhtml"/>
             <p:menuitem value="Articles"    url="/listArticles.xhtml"/>
             <p:menuitem value="People"      url="/listPeople.xhtml"/>
             <p:menuitem value="Services"    url="/viewRest.xhtml"/>
-            <p:menuitem value="Quizzes"     url="/admin/listQuiz.xhtml"/>
+            <p:menuitem value="Documentation"    url="/viewDocumentation.xhtml"/>
             <!-- <p:menuitem value="Add Video"   url="/admin/newVideo.xhtml"/>
             <p:menuitem value="Add Article" url="/admin/newArticle.xhtml"/>
             <p:menuitem value="Add Person"  url="/newPerson.xhtml"/>
