--- a/src/main/webapp/templates/menu.xhtml
+++ b/src/main/webapp/templates/menu.xhtml
@@ -16,9 +16,8 @@
             <p:menuitem value="People"      url="/listPeople.xhtml"/>
             <p:menuitem value="Services"    url="/viewRest.xhtml"/>
             <p:menuitem value="Documentation"    url="/viewDocumentation.xhtml"/>
-            <p:menuitem value="Quizzes"     url="/admin/listQuiz.xhtml"/>
-            <p:menuitem value="Help"     url="/help.xhtml"/>
-            <!-- <p:menuitem value="Add Video"   url="/admin/newVideo.xhtml"/>
+            <!-- <p:menuitem value="Help"        url="/help.xhtml"/>
+            <p:menuitem value="Add Video"   url="/admin/newVideo.xhtml"/>
             <p:menuitem value="Add Article" url="/admin/newArticle.xhtml"/>
             <p:menuitem value="Add Person"  url="/newPerson.xhtml"/>
             <p:menuitem value="Add quiz"    url="/newQuiz.xhtml"/> -->
