--- a/src/main/webapp/resources/css/css.css
+++ b/src/main/webapp/resources/css/css.css
@@ -2,10 +2,6 @@
     font-size: 85% !important;
 }
 
-body, html {
-    height: 100%;
-}
-
 body {
     margin: 0;
     padding: 0;
@@ -76,7 +72,7 @@ body {
     margin:auto;
     border: solid;
     border-width: 1px;
-    height:100%;
+    height: auto;
 }
 
 #footer {
@@ -88,6 +84,7 @@ body {
     text-align: center;
     width: 900px;
     margin: auto;
+    height: 800px;
 }
 
 .icon {
