--- a/src/main/webapp/templates/layout.xhtml
+++ b/src/main/webapp/templates/layout.xhtml
@@ -6,6 +6,7 @@
     <h:head>
         <title>HIALS E-Læringsapp</title>
         <h:outputStylesheet name="css.css" library="css"/>
+        <link rel="stylesheet" href="../resources/css/mobile.css" media="only screen and (max-device-width: 480px" />
         <ui:insert name="extrascript"/>
         <ui:insert name="stylesheets"/>
     </h:head>
