--- a/src/main/webapp/resources/css/css.css
+++ b/src/main/webapp/resources/css/css.css
@@ -119,7 +119,7 @@ body {
     font-weight: bold;
 }
 
-#appPreview {
+.appPreview {
     text-align: center;
     width: 350px;
     margin: auto;
@@ -129,13 +129,14 @@ body {
     float: left;
     width: 33%;
     height: 100px;
-    font-size: 10px;
+    font-size: 12px;
 }
 
 .previewItems img {
-    width: 50px;
+    width: 60px;
 }
 
 .previewText {
     text-align: center;
+    padding: 5px;
 }
