--- a/src/main/webapp/templates/layout.xhtml
+++ b/src/main/webapp/templates/layout.xhtml
@@ -15,6 +15,9 @@
         <div id="container">
             <div id="header">
                 <h1><ui:insert name="title" /></h1>
+                <div style="position: absolute; right: 20px; bottom: 20px; color: #003468; font-size: 20px;">
+                    Version 1.0
+                </div>
             </div>
             <div id="menu">
                 <ui:include src="menu.xhtml" />
