--- a/src/main/webapp/resources/css/mobile.css
+++ b/src/main/webapp/resources/css/mobile.css
@@ -147,3 +147,16 @@ body {
 .ui-dialog img {
     width: 100px;
 }
+
+#article {
+    /*background-color: #f9f9f9;*/ 
+    padding: 10px;
+}
+
+#articleheading {
+    text-align: center;
+}
+
+#articlebody {
+
+}
