--- a/src/main/webapp/resources/css/mobile.css
+++ b/src/main/webapp/resources/css/mobile.css
@@ -160,3 +160,11 @@ body {
 #articlebody img {
     max-width: 400px;
 }
+
+#restmenu {
+    display: none;
+}
+
+#topleftthingy {
+    font-size: 10px;
+}
