--- a/src/main/webapp/templates/layout.xhtml
+++ b/src/main/webapp/templates/layout.xhtml
@@ -6,7 +6,7 @@
     <h:head>
         <title>HIALS E-Læringsapp</title>
         <h:outputStylesheet name="css.css" library="css"/>
-        <link rel="stylesheet" href="resources/css/mobile.css" media="only screen and (max-device-width: 480px" />
+        <link rel="stylesheet" href="resources/css/mobile.css" media="handheld, only screen and (max-device-width:800px)"/>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <ui:insert name="extrascript"/>
         <ui:insert name="stylesheets"/>
@@ -15,7 +15,7 @@
         <div id="container">
             <div id="header">
                 <h1><ui:insert name="title" /></h1>
-                <div style="position: absolute; right: 20px; bottom: 20px; color: #003468; font-size: 20px; text-align: center;">
+                <div id="topleftthingy">
                     <div style="padding-bottom: 15px;">
                         Version 1.0
                     </div>
