--- a/src/main/webapp/resources/css/mobile.css
+++ b/src/main/webapp/resources/css/mobile.css
@@ -25,15 +25,13 @@ body {
 }
 
 #container, #header, #menu, #center, #footer {
-    width: 1200px;
+    width: 350px;
 }
 
 #header {
-    height: 154px;
-    background-image: url("../resources/images/Logo_648rgb.png");
-    background-repeat: no-repeat;
-    background-position: top left;
-    position: relative;
+    text-align:center;
+    height: 50px;
+    background-size: 50%;
 }
 
 #header h1 {
@@ -71,6 +69,10 @@ body {
     clear:both;
 }
 
+#menu {
+    display: none;
+}
+
 #container {
     background-color: #fff;
     margin:auto;
@@ -84,15 +86,20 @@ body {
 
 #appicons {
     text-align: center;
-    width: 900px;
+    width: 350px;
     margin: auto;
-    height: 800px;
+    height: 300px;
 }
 
 .icon {
     float: left;
-    width: 300px;
-    height: 200px;
+    width: 33%;
+    height: 100px;
+    font-size: 10px;
+}
+
+.icon img {
+    width: 50px;
 }
 
 .icontext {
@@ -101,21 +108,23 @@ body {
 }
 
 #frontpageheader {
-    font-size: 40px;
-    padding-top:50px;
-    padding-bottom: 50px;
+    font-size: 15px;
+    padding: 10px;
 }
 
 #bottombanner {
-    width: 500px;
-    height: 256px;
-    font-size: 40px;
-    margin: auto;    
+    width: 175px;
+    height: 128px;
+    margin: auto;   
+    font-size: 15px;
+}
+
+#bottombanner img {
+    width: 75px;
 }
 
 #bottombanner span {
-    padding-top: 125px;
-    float:right;
+    padding-top: 30px;
 }
 
 #frontpageheader, h1 {
@@ -123,31 +132,39 @@ body {
     font-weight: bold;
 }
 
-.appPreview {
+.ui-dialog {
+    width: 300px;
+}
+
+.ui-widget-header {
+    font-size: 10px;
+}
+
+.ui-dialog-content {
+    font-size: 10px;
+}
+
+.ui-dialog img {
+    width: 100px;
+}
+
+#article {
+    /*background-color: #f9f9f9;*/ 
+    padding: 10px;
+}
+
+#articleheading {
     text-align: center;
-    width: 350px;
-    margin: auto;
 }
 
-.previewItems {
-    float: left;
-    width: 33%;
-    height: 100px;
-    font-size: 12px;
+#articlebody img {
+    max-width: 400px;
 }
 
-.previewItems img {
-    width: 60px;
-}
-
-.previewText {
-    text-align: center;
-    padding: 5px;
+#restmenu {
+    display: none;
 }
 
 #topleftthingy {
-    position: absolute; right: 20px; bottom: 20px; 
-    color: #003468; 
-    font-size: 20px; 
-    text-align: center;
+    font-size: 10px;
 }
