Nearly finalized TimeEdit API. Missing WebApplicationExceptions for error and input handling. Two version available, one simplified "pretty" jax-rs variant and another that mirrors the TimeEdit get parameters. (If it works on TimeEdit, it works here. Application needs to be updated accordingly, as the web service now also spits out weeks, and lectures that can hold multiple courses. Simplified version that only spits out dates NYI.

--- a/src/main/webapp/templates/layout.xhtml
+++ b/src/main/webapp/templates/layout.xhtml
@@ -29,7 +29,7 @@
                             <p:menuitem value="News"      url="/services/article/news/"/>
                             <p:menuitem value="Persons"   url="/services/person"/>
                             <p:menuitem value="Frontpage" url="/services/frontpage"/>
-                            <p:menuitem value="TimeEdit example" url="/services/timeedit/183000"/>
+                            <p:menuitem value="TimeEdit" url="/services/timeedit/objects/183000"/>
                         </p:menuButton>
                     </h:form>
                 </div>
