--- a/src/main/webapp/templates/layout.xhtml
+++ b/src/main/webapp/templates/layout.xhtml
@@ -29,7 +29,8 @@
                             <p:menuitem value="News"      url="/services/article/news/"/>
                             <p:menuitem value="Persons"   url="/services/person"/>
                             <p:menuitem value="Frontpage" url="/services/frontpage"/>
-                            <p:menuitem value="TimeEdit" url="/services/timeedit/183000"/>
+                            <p:menuitem value="TimeEdit" url="/services/timeedit/183000/startweek/1301/stopweek/1315"/>
+                            <p:menuitem value="TimeEdit SIMPLE" url="/services/timeedit/simple/183000/startweek/1301/stopweek/1315"/>
                         </p:menuButton>
                     </h:form>
                 </div>
