--- a/src/main/webapp/templates/layout.xhtml
+++ b/src/main/webapp/templates/layout.xhtml
@@ -31,6 +31,7 @@
                             <p:menuitem value="Frontpage" url="/services/frontpage"/>
                             <p:menuitem value="TimeEdit" url="/services/timeedit/183000/startweek/1301/stopweek/1315"/>
                             <p:menuitem value="TimeEdit SIMPLE" url="/services/timeedit/simple/183000/startweek/1301/stopweek/1315"/>
+                            <p:menuitem value="TimeEdit SIMPLE" url="/services/timeedit/coursecode/ID102012/startweek/1301/stopweek/1305"/>
                         </p:menuButton>
                     </h:form>
                 </div>
